# absolut_backend

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  app.yml  dev.sh  docker-compose.prod.yml  docker-compose.yml  env.example  prod.sh  pyproject.toml  storages.yml
src/: utils.py
src/cargo/: admin.py  models.py
src/cargo/api/: serializers.py  urls.py  views.py
src/cargo/migrations/: 0001_initial.py
src/order_statuses/: admin.py  apps.py  choices.py  models.py
src/order_statuses/api/: serializers.py  urls.py  views.py
src/order_statuses/migrations/: 0001_initial.py  0002_alter_orderstatus_color.py  0003_alter_orderstatus_color.py
src/orders/: admin.py  models.py
src/orders/api/: serializers.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py  0002_alter_order_packagings_alter_order_services.py
src/packaging/: admin.py  apps.py  models.py
src/packaging/api/: serializers.py  urls.py  views.py
src/packaging/migrations/: 0001_initial.py
src/services/: admin.py  models.py
src/services/api/: serializers.py  urls.py  views.py
src/services/migrations/: 0001_initial.py  0002_remove_service_description.py
src/src/: asgi.py  settings.py  urls.py  wsgi.py
src/transport/: admin.py  models.py
src/transport/api/: serializers.py  urls.py  views.py
src/transport/migrations/: 0001_initial.py
